# flokoa

./: .gitignore  AGENT_HARNESS_REVIEW.md  CHANGELOG.md  CLAUDE.md  Makefile  OVERMOCKING_REVIEW.md  README.md  RELEASE_REVIEW.md  TEST_COVERAGE_ANALYSIS.md  zensical.toml
operator/test/e2e/fixtures/capabilities/echo/: artifact.json  pyproject.toml
operator/test/e2e/fixtures/capabilities/upper/: artifact.json  pyproject.toml
sdk/python/: .coverage  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.managed  Makefile  pyproject.toml
sdk/python/etc/flokoa/tools/: another_api_tool.json  test_api_tool.json
sdk/python/flokoa/: .gitignore  CLAUDE.md  Makefile  pyproject.toml
sdk/python/flokoa-codemode-mcp/: main.py  pyproject.toml
sdk/python/flokoa-codemode-mcp/src/flokoa_codemode_mcp/: __init__.py  executor.py  server.py  stub_generator.py
sdk/python/flokoa-codemode-mcp/tests/: conftest.py  test_executor_auth.py  test_gaps.py
sdk/python/flokoa-common/: README.md  main.py  pyproject.toml
sdk/python/flokoa-common/src/flokoa_common/auth/: auth_credential.py  auth_schemes.py  helpers.py
sdk/python/flokoa-common/src/flokoa_common/utils/: text.py  url_validation.py
sdk/python/flokoa-common/tests/: test_auth_helpers.py  test_exchangers_auto.py  test_exchangers_oauth2.py  test_exchangers_service_account.py  test_gaps.py
sdk/python/flokoa-managed-agent/: Dockerfile  README.md  pyproject.toml
sdk/python/flokoa-managed-agent/src/flokoa_managed_agent/: __init__.py  __main__.py  agent_executor.py  bootstrap.py  config.py
sdk/python/flokoa-managed-agent/tests/: conftest.py  test_agent_executor.py  test_bootstrap.py  test_config.py  test_main.py
sdk/python/flokoa-managed-agent/tests/e2e/: conftest.py  test_a2a.py  test_agent_card.py  test_health.py
sdk/python/flokoa-managed-task/: Dockerfile  README.md  pyproject.toml
sdk/python/flokoa-managed-task/src/flokoa_managed_task/: __main__.py  bootstrap.py  config.py
sdk/python/flokoa-openapi/: README.md  pyproject.toml
sdk/python/flokoa-openapi/src/flokoa_openapi/: __init__.py  capability.py  toolset.py
sdk/python/flokoa-openapi/tests/: conftest.py  test_call_tool.py  test_capability_spec.py  test_gaps.py  test_toolset_mapping.py
sdk/python/flokoa-runner/: Dockerfile  README.md  pyproject.toml  runner-manifest.json
sdk/python/flokoa-runner/hack/: gen_agentspec_schema.py  gen_runner_manifest.py
sdk/python/flokoa-runner/src/flokoa_runner/: __init__.py  __main__.py  agent.py  capabilities.py  errors.py  manifest.py  secrets.py  serve.py  specfile.py
sdk/python/flokoa-runner/src/flokoa_runner/platform_capabilities/: __init__.py  telemetry.py
sdk/python/flokoa-runner/tests/: conftest.py  test_a2a_serving.py  test_capabilities.py  test_contract_artifacts.py  test_contract_hydration.py  test_manifest.py  test_platform_telemetry.py  test_secrets.py
sdk/python/flokoa-types/: README.md  pyproject.toml
sdk/python/flokoa-types/src/flokoa_types/: __init__.py  agentcard.py  agenttool.py  agentworkflow.py  capability.py  modelconfig.py  modelsettings.py  taskconfig.py  templateconfig.py
sdk/python/flokoa/src/flokoa/: __main__.py  cache.py  context.py  serving.py  telemetry.py
sdk/python/flokoa/src/flokoa/agent_executor/: __init__.py
sdk/python/flokoa/src/flokoa/auth/: auth_credential.py  auth_schemes.py  auth_tool.py
sdk/python/flokoa/src/flokoa/capability_cli/: __init__.py  artifact.py  build.py  container.py  cosign.py  cr.py  crane.py  errors.py  import_cmd.py  index.py  kubectl.py  push.py  search.py
sdk/python/flokoa/src/flokoa/config/: __init__.py  agent_builder.py  agent_config.py  code_ref.py  loader.py  tool_config.py
sdk/python/flokoa/src/flokoa/integrations/: __init__.py
sdk/python/flokoa/src/flokoa/templated/: __init__.py
sdk/python/flokoa/src/flokoa/tools/: __init__.py  toolset_factory.py
sdk/python/flokoa/src/flokoa/types/: modelconfig.py
sdk/python/flokoa/src/flokoa/utils/: __init__.py  agent_card_builder.py  url_validation.py
sdk/python/flokoa/src/flokoa/workflow/: __init__.py  _compiler.py  _manifest.py  _runner.py  _topology.py
sdk/python/flokoa/tests/: conftest.py
sdk/python/flokoa/tests/e2e/: conftest.py  test_a2a.py
sdk/python/flokoa/tests/flokoa_cli/: test_telemetry.py
sdk/python/flokoa/tests/flokoa_cli/agent_executor/: conftest.py  test_agent_executor.py
sdk/python/flokoa/tests/flokoa_cli/cache/: test_cache.py
sdk/python/flokoa/tests/flokoa_cli/capability_cli/: conftest.py  test_artifact.py  test_build_command.py  test_container.py  test_cosign.py  test_cr.py  test_crane.py  test_import_command.py  test_index.py  test_integration_build.py  test_kubectl.py  test_push_command.py  test_schema_derivation.py  test_search_command.py
sdk/python/flokoa/tests/flokoa_cli/config/: test_agent_builder.py  test_agent_config.py  (+3 more)
sdk/python/samples/: agent-card.json  agent-config.json  agent-spec.yaml  task-config.json  test_agent.py
sdk/python/src/flokoa/: __init__.py  __main__.py  cache.py  exceptions.py  managed_cli.py
sdk/python/src/flokoa/agent_executor/: __init__.py
sdk/python/src/flokoa/integrations/: __init__.py
sdk/python/src/flokoa/managed/: __init__.py  agent.py  agent_executor.py
sdk/python/src/flokoa/templated/: agent.py  agent_executor.py
sdk/python/src/flokoa/tools/: __init__.py  api.py  http_api.py  toolset_factory.py
sdk/python/src/flokoa/types/: __init__.py  agentcard.py  agenttool.py  api_tool.py  managedconfig.py  model.py  modelconfig.py  templateconfig.py
sdk/python/src/flokoa/utils/: __init__.py  agent_card_builder.py
sdk/python/tests/e2e/: conftest.py  test_agent_card.py  test_managed_agent.py  test_managed_task.py
sdk/python/tests/flokoa_cli/agent_executor/: test_agent_executor.py
sdk/python/tests/flokoa_cli/cache/: test_cache.py
sdk/python/tests/flokoa_cli/fixtures/: __init__.py  agent.py  openapi.py
sdk/python/tests/flokoa_cli/tools/: conftest.py  test_load_tools.py
sdk/python/tests/flokoa_cli/utils/: conftest.py  test_agent_card_builder.py  test_cached_loading.py  test_load_agent_card.py  test_load_model_config.py
(+747 files in other folders)
