[project]
name = "flokoa-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flokoa",
]

[tool.uv.workspace]
members = [
    "flokoa",
    "flokoa-types",
    "flokoa-managed-agent",
    "flokoa-runner",
    "flokoa-codemode-mcp",
    "flokoa-common",
]

[tool.uv.sources]
flokoa = { workspace = true }


[tool.ruff]
target-version = "py313"
line-length = 120
fix = true


[tool.ruff.lint]
preview = false
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = ["E501", "E731", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S104", "S105", "S106", "B017"]
"**/tests/*" = ["S101", "S104", "S105", "S106", "B017"]
