[project]
name = "flokoa-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flokoa",
]

[tool.uv.workspace]
members = [
    "flokoa",
    "flokoa-types",
    "flokoa-runner",
    "flokoa-codemode-mcp",
    "flokoa-common",
    "flokoa-openapi",
]

[tool.uv.sources]
flokoa = { workspace = true }


# Workspace-root pytest run (`uv run pytest` from sdk/python/). importlib import
# mode avoids cross-package basename collisions (test_gaps.py, tests/conftest.py
# exist in several member packages). Per-package runs (make test, CI) resolve
# each member's own pyproject as rootdir config and are unaffected.
[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "flokoa/tests",
    "flokoa-runner/tests",
    "flokoa-codemode-mcp/tests",
    "flokoa-common/tests",
    "flokoa-openapi/tests",
]


[tool.ruff]
target-version = "py313"
line-length = 120
fix = true


[tool.ruff.lint]
preview = false
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = ["E501", "E731", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S104", "S105", "S106", "B017"]
"**/tests/**" = ["S101", "S104", "S105", "S106", "B017", "S603", "S607"]
"**/test/e2e/fixtures/**" = ["S104"]
# Capability CLI: click command bodies are inherently branchy (C901 is tracked
# separately, matching the flokoa package config). The in-runner build scripts
# call pip via explicit argv arrays ([sys.executable, "-m", "pip", ...]) — the
# same pattern flokoa_runner uses — so S603 and TRY300 are accepted there.
"**/capability_cli/*" = ["C901"]
"**/capability_cli/_inrunner/*" = ["S603", "C901", "TRY300"]
