[project]
name = "flokoa-codemode-mcp"
version = "0.1.0"
description = "MCP server implementing Code Mode for Flokoa - executes LLM-generated code against OpenAPI specs in a secure sandbox"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.2",
    "flokoa-common",
    "flokoa-types",
    "httpx>=0.27",
    "pydantic-monty>=0.0.7",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_codemode_mcp"]

[tool.uv]
package = true

[tool.uv.sources]
flokoa-common = { workspace = true }
flokoa-types = { workspace = true }

[dependency-groups]
dev = [
    "anyio>=4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
