[project]
name = "flokoa-common"
version = "0.1.0"
description = "Shared utilities for the Flokoa ecosystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "fastapi>=0.128.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_common"]

[tool.uv]
package = true
