[project]
name = "flokoa-managed-agent"
version = "0.1.0"
description = "Flokoa managed agent runtime for operator-deployed pydantic-ai agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flokoa[pydantic-ai]",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_managed_agent"]

[tool.uv]
package = true

[tool.uv.sources]
flokoa = { workspace = true }
flokoa-types = { workspace = true }

[dependency-groups]
dev = [
    "a2a-sdk>=0.3.22",
    "anyio>=4.0",
    "httpx>=0.27",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
