[project]
name = "flokoa-managed-task"
version = "0.1.0"
description = "Flokoa managed task runtime for operator-deployed agent tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marvin>=2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_managed_task"]

[tool.uv]
package = true
