[project]
name = "flokoa-managed-task"
version = "0.1.0"
description = "Flokoa managed task runtime for operator-deployed agent tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marvin>=2.0",
    "pyyaml>=6.0",
    "flokoa[pydantic-ai]",
    "flokoa-types",
    "a2a-sdk>=0.3.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_managed_task"]

[tool.uv]
package = true

[tool.uv.sources]
flokoa = { workspace = true }
flokoa-types = { workspace = true }
