[project]
name = "flokoa-openapi"
version = "0.1.0"
description = "OpenAPI capability for pydantic-ai agents: spec-derived typed toolset with hardened, authenticated execution"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Must match the runner baseline pin (flokoa-runner/pyproject.toml).
    # This package ships as a Capability artifact whose `requires` tuple is
    # checked against the runner manifest at install time.
    "pydantic-ai==1.107.0",
    "flokoa-common",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_openapi"]

[tool.uv]
package = true

[tool.uv.sources]
flokoa-common = { workspace = true }

[dependency-groups]
dev = [
    "anyio>=4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# importlib mode (matching the workspace-root config): tests/ has no
# __init__.py — claiming the real package name `tests` collides with
# flokoa/tests in workspace-root runs — and the `from .conftest import ...`
# helpers need a package context, which importlib mode synthesizes.
addopts = "--import-mode=importlib"
