[project]
name = "flokoa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.22",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "flokoa-common",
    "flokoa-types",
    "pydantic>=2.12.5",
]

[project.scripts]
flokoa = "flokoa.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa"]

[tool.uv]
package = true

[tool.uv.sources]
flokoa-common = { workspace = true }
flokoa-types = { workspace = true }

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai>=1.44.0",
]

google-adk = [
    "google-adk>=1.14.1",
]

tracing = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[dependency-groups]
pydantic-ai = [
    "flokoa[pydantic-ai]",
]
google-adk = [
    "flokoa[google-adk]",
]
dev = [
    "flokoa[google-adk]",
    "flokoa[pydantic-ai]",
    "mypy-boto3-bedrock-runtime>=1.42.31",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]


[tool.ty.environment]
python = ".venv"
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Function complexity — tracked separately
    "C901",
    # Consider moving return to else block
    "TRY300",
    # Do not raise vanilla Exception
    "TRY002",
    # Generic class type parameter style (PEP 695)
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "B017", "F403", "RUF012", "RUF043", "E402", "SIM117"]
"src/*" = ["S105"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src/flokoa"]
