[project]
name = "flokoa-cap-echo"
version = "0.1.0"
description = "Reference e2e fixture: the smallest real capability (zero non-baseline deps)"
requires-python = ">=3.13"
# pydantic-ai is in the runner baseline (runtime contract §1) — the wheelhouse
# for this fixture therefore holds exactly one wheel: the capability itself.
dependencies = ["pydantic-ai>=1.107,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flokoa_cap_echo"]
